2011-11-03  Ramon Novoa  <rnovoa@artica.es>

	* pandora_windows_service.h,
	  pandora_windows_service.cc: Several fixes to the proxy mode and
	  broker agents.

2011-09-23  Sancho Lerena <slerena@artica.es>

	* installer/pandora.mpi: Updated string version in agent installer.

2011-09-22 Dario Rodriguez <dario.rodriguez@artica.es>

	* bin/util/tentacle_server.exe: Added version with memory leak bug
	fixed.

2011-09-14 Dario Rodriguez <dario.rodriguez@artica.es>
	
	* bin/util/tentacle_server.exe: Tentacle Proxy temporal
	with temporal patch for Windows Platforms.

2011-08-29  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_regexp.cc,
	  modules/pandora_module_regexp.h,
	  modules/pandora_module_factory.cc: Check file size to detect if the
	  file was truncated. Added a new configuration token to avoid seeking
	  to the eof.

2011-08-29 Dario Rodriguez <dario.rodriguez@artica.es>

	* modules/pandora_module_factory.cc: Fixed a bug collecting some module
	parameters like min_warning, max_warning, min_ff_event, etc.

	Fixes: 3396949

2011-08-19  Sancho Lerena <slerena@artica.es>

	* bin/pandora_agent.conf: Ready to get the server string from the
	installer

	* installer/pandora.mpi: Updated installer, version, some strings
	and added the question to get the agent group.

	* installer/pandora.ico: New icon for windows shortcuts. Nice! :)

	* pandora.cc: Updated version.

2011-08-19  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_plugin.cc: Set a virtually infinite timeout
	  for plugins.

	* pandora_windows_service.cc: The Pandora_Windows_Service destructor
	  could try to dereference a NULL pointer. Fixed.

2011-07-29 Dario Rodriguez <dario.rodriguez@artica.es>

	* bin/PandoraAgent.exe: Compiled new exe with a bug fixed.
	* pandora_windows_service.cc: Fixed a bug related to proxy mode.

2011-07-28 Dario Rodriguez <dario.rodriguez@artica.es>
	
	* pandora_windows_service.h, pandora_windows_service.cc: Added proxy
	mode feature.