@@ -6,7 +6,7 @@
 DIST=`lsb_release -i | awk '{print $3}'`
 HOST="i586-mingw32msvc"
 if [ "$DIST" == "SUSE" ]; then
-	HOST="i686-pc-mingw32"
+	HOST="i686-w64-mingw32"
 fi
 
 ./autogen.sh && ./configure --host=$HOST && make clean && make && cp PandoraAgent.exe bin/ && installjammer --build installer/pandora.mpi
